# pomodoroLinux

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md
assets/: pomodoro-indicator.desktop
backlog/: accept-estimate-bypasses-ownership.md  anyone-can-assign.md  anyone-can-delete-labels.md  assignee-cannot-unassign-self.md  assignee-cannot-update.md  burn-log-no-auth.md  default-root-password-weak.md  logout-doesnt-revoke-refresh.md  no-registration-disable.md  password-reset-no-token-invalidation.md  refresh-uses-wrong-server.md  role-change-no-audit.md  role-change-not-immediate.md  room-state-no-membership-check.md  root-can-demote-self-to-last.md  seed-root-not-resilient.md  user-deletion-destroys-data.md
crates/pomodoro-daemon/: Cargo.toml
crates/pomodoro-daemon/src/: auth.rs  config.rs  engine.rs  lib.rs  main.rs  notify.rs  webhook.rs
crates/pomodoro-daemon/src/db/: assignees.rs  attachments.rs  audit.rs  burns.rs  dependencies.rs  epics.rs  labels.rs  mod.rs  notifications.rs  recurrence.rs  rooms.rs  sessions.rs  sprints.rs  tasks.rs  teams.rs  types.rs  users.rs  watchers.rs  webhooks.rs
crates/pomodoro-daemon/src/routes/: admin.rs  assignees.rs  attachments.rs  auth_routes.rs  burns.rs  burns_task.rs  comments.rs  config.rs  dependencies.rs  epics.rs  export.rs  history.rs  labels.rs  misc.rs  mod.rs  profile.rs  recurrence.rs  rooms.rs  sprints.rs  tasks.rs  teams.rs  templates.rs  timer.rs  types.rs  watchers.rs  webhooks.rs
crates/pomodoro-daemon/tests/: api_tests.rs
docs/: BACKLOG_V11.md  BACKLOG_V13.md  BACKLOG_V14.md  BACKLOG_V15.md  BACKLOG_V16.md  BACKLOG_V17.md  BACKLOG_V18.md  BACKLOG_V19.md  (+32 more)
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
(+133 files in other folders)
