[package]
name = "pomodoro-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pomodoro-daemon"
path = "src/main.rs"

[lib]
name = "pomodoro_daemon"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
notify-rust = "4"
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
bcrypt = "0.17"
jsonwebtoken = "9"
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
sha2 = "0.11.0"
hmac = "0.13.0"
rand = "0.9"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
